[package]
name = "solana_tx_explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
solana-client = "1.18.2"
solana-sdk = "1.18.2"
solana-transaction-status = "1.18.2"
